fix: resolve critical security vulnerabilities and JWT issues