@@ -11,6 +11,7 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
@@ -26,19 +27,19 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.util.Arrays;
 import java.util.List;
 
-@Configuration //directs Spring to find Beans in this class
+@Configuration
 @EnableWebSecurity
+@EnableMethodSecurity
 @RequiredArgsConstructor
 public class ShopConfig {
     private final ShopUserDetailsService shopUserDetailsService;
     private final JwtEntryPoint authEntryPoint;
 
-    @Value("/api/v1")
-    private static String API;
+    @Value("${api.prefix}")
+    private String apiPrefix;
 
-    // urls that must be accessed ONLY after auth
-    private static final List<String> SECURED_URLS
-            = List.of(API+"/carts/**", API+"/cartItems/**", API+"/orders/**");
+    @Value("${app.cors.allowed-origin:http://localhost:5174}")
+    private String allowedOrigin;
 
     @Bean
     public ModelMapper modelMapper() {
@@ -57,45 +58,49 @@ public class ShopConfig {
 
     @Bean
     public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder(); // simply just an encrpytion algorithm
+        return new BCryptPasswordEncoder();
     }
 
     @Bean
-    public DaoAuthenticationProvider authenticationProvider() { //Data Access Object
+    public DaoAuthenticationProvider authenticationProvider() {
         var authProvider = new DaoAuthenticationProvider();
         authProvider.setUserDetailsService(shopUserDetailsService);
         authProvider.setPasswordEncoder(passwordEncoder());
         return authProvider;
     }
 
-    // NEW: CORS Configuration Bean
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(Arrays.asList("http://localhost:5174"));  // Your Vite frontend (use patterns for dev flexibility)
+        configuration.setAllowedOriginPatterns(List.of(allowedOrigin));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));  // Allow all headers (e.g., Authorization for JWT)
-        configuration.setAllowCredentials(true);  // Enable for JWT cookies if needed
-        configuration.setMaxAge(3600L);  // Cache preflight responses for 1 hour
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);  // Apply to all endpoints
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http.csrf(AbstractHttpConfigurer::disable)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))  // NEW: Integrate CORS (uses the bean above)
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .exceptionHandling(exception -> exception.authenticationEntryPoint(authEntryPoint))
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/v1/auth/**", "/api/v1/products/**").permitAll()  // NEW: Allow public access to auth & products
-                        .requestMatchers(SECURED_URLS.toArray(String[]::new)).authenticated()
-                        .anyRequest().permitAll());
+                        // Public endpoints
+                        .requestMatchers(
+                                apiPrefix + "/auth/**",
+                                apiPrefix + "/products/**",
+                                "GET:" + apiPrefix + "/images/**"
+                        ).permitAll()
+                        // Everything else requires authentication
+                        .anyRequest().authenticated()
+                );
 
         http.authenticationProvider(authenticationProvider());
-        // tell Spring to use my filter before its own
         http.addFilterBefore(authTokenFilter(), UsernamePasswordAuthenticationFilter.class);
         return http.build();
     }
